[package]
name = "tulip-derivative"
version = "2.2.1"
authors = ["mcarton <cartonmartin+git@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "tulip fork of derivative"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1", features = ["visit", "extra-traits"] }

[dev-dependencies]
# 1.0.23 requires rustc 1.36, while our msrv is 1.34
runtime-macros-derive = "0.4.0"
trybuild = "1.0.18, <1.0.23"
walkdir = "2"

[features]
use_core = []
